<resources>
    <string name="app_name">Monetrix</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">History</string>
    <string name="category_image_description">Category Image</string>
    <string name="income_text">Income</string>
    <string name="expense_text">Expense</string>
    <string name="amount_edittext">Amount</string>
    <string name="description_edittext">Description</string>
    <string name="date_edittext">Date</string>
    <string name="add_transaction_title">Enter Transaction</string>
    <string name="choose_category_title">Choose Category</string>
    <string name="save_button_title">Save</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="category_image">Category Image</string>
    <string name="current_plans">Current Plans</string>
    <string name="past_plans">Past Plans</string>
    <string name="saving_plan">Saving Plan</string>
    <string name="rupee_symbol">₹</string>
    <string name="rupee">₹ %1$f</string>
    <string name="investment">Investment</string>
    <string name="title_insight">Insight</string>
    <string name="title_feed">Feed</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>