<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_savingplans"
        android:icon="@drawable/savings"
        android:title="@string/saving_plan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/history"
        android:title="@string/title_transactions"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_insight"
        android:icon="@drawable/insights"
        android:title="@string/title_insight"
        app:showAsAction="ifRoom" />

</menu>